--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.7.0",
+    "@nanostores/react": "github:ai/react",
+    "@openrouter/ai-sdk-provider": "^0.4.5",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.10",
     "@radix-ui/react-label": "^2.1.4",
@@ -18,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.10",
     "@radix-ui/react-toggle": "^1.1.6",
+    "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
@@ -26,6 +29,8 @@
     "monaco-themes": "^0.4.4",
     "next": "15.1.7",
     "next-themes": "^0.4.6",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -34,6 +39,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vercel-ai": "^0.0.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
